Global Box Sizing - Border Box

--- a/stylesheets/sass/style.scss
+++ b/stylesheets/sass/style.scss
@@ -214,6 +214,12 @@ table {
    Base Styles
    ========================================================================== */ 
 
+/* Global Styles */
+
+* {
+	@include box-sizing("border-box");
+}
+
 /* Images */
 
 .template-content {
