Updating base image style

--- a/stylesheets/sass/style.scss
+++ b/stylesheets/sass/style.scss
@@ -237,6 +237,9 @@ img.center {
 	display: block;
 	margin: 0 auto 20px auto;
 }
+.captionImage img {
+	margin-bottom: 10px;
+}
 .captionImage.center {
 	margin-left: auto;
 	margin-right: auto;
