Base list style update

--- a/stylesheets/sass/style.scss
+++ b/stylesheets/sass/style.scss
@@ -39,6 +39,7 @@ ul, ol {
 	margin: 0 0 20px 40px;
 	padding: 0;
 	li {
+		list-style: disc;
 		list-style-position: outside;
 		margin-bottom: 5px;
 	}
