--- a/stylesheets/sass/_varsandmixins.scss
+++ b/stylesheets/sass/_varsandmixins.scss
@@ -3,6 +3,7 @@
   Variables
    ========================================================================== */ 
 
+$siteid: "xxxx";
 $primarycolor: #4f2683;
 $primarycolor_dark: darken($primarycolor, 6%);
 $primarycolor_meddark: darken($primarycolor, 15%);
