--- a/stylesheets/sass/_grid.scss
+++ b/stylesheets/sass/_grid.scss
@@ -48,12 +48,17 @@ img {
     float: left; }
   .row .row {
     width: auto;
-    margin-left: -15px;
-    margin-right: -15px;
+    margin-left: -30px;
+    margin-right: -30px;
     margin-top: 0;
     margin-bottom: 0;
     max-width: none;
-    *zoom: 1; }
+    *zoom: 1;
+    @include bp("tablet") {
+      margin-left: -15px;
+      margin-right: -15px;
+    }
+  }
     .row .row:before, .row .row:after {
       content: " ";
       display: table; }
@@ -73,18 +78,28 @@ img {
 .column,
 .columns {
   position: relative;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
   width: 100%;
-  float: left; }
+  float: left;
+  @include bp("tablet") {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
 
 @media only screen {
   .column,
   .columns {
     position: relative;
-    padding-left: 15px;
-    padding-right: 15px;
-    float: left; }
+    padding-left: 30px;
+    padding-right: 30px;
+    float: left;
+    @include bp("tablet") {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+  }
 
   .small-1 {
     position: relative;
