--- a/stylesheets/sass/_forms.scss
+++ b/stylesheets/sass/_forms.scss
@@ -13,6 +13,7 @@ fieldset {
 	padding: 0;
 }
 input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], textarea {
+	-webkit-appearance: none;
 	background: #fff;
 	border: 1px solid $offsetcolor_meddark;
 	color: $textcolor_dark;
