--- a/stylesheets/sass/_forms.scss
+++ b/stylesheets/sass/_forms.scss
@@ -117,7 +117,7 @@ input.action:focus {
 /* Form Lists */
 
 form ul { margin: 0; }
-form li {
+form ul li {
 	list-style: none;
 	margin: 0 0 5px 0;
 }
