Fix sass import order

--- a/stylesheets/sass/style.scss
+++ b/stylesheets/sass/style.scss
@@ -1,24 +1,11 @@
-
 /* ==========================================================================
-   Compass Imports
+   Imports
    ========================================================================== */ 
 
 @import "compass";
-
-
-/* ==========================================================================
-   Vendor Imports
-   ========================================================================== */ 
-
+@import "varsandmixins";
 @import "normalize";
 @import "grid";
-
-
-/* ==========================================================================
-   My Imports
-   ========================================================================== */ 
-
-@import "varsandmixins";
 @import "forms";
 
 
