--- a/stylesheets/sass/style.scss
+++ b/stylesheets/sass/style.scss
@@ -391,16 +391,48 @@ code {
 	text-align: right;
 }
 blockquote {
+	background: url(../../img/blockquote.png) no-repeat;
+	border: none;
 	margin: 0 0 20px 0;
-	text-align: center;
-	font-style: italic;
-	@include fontsize(1.8,2.6);
-	@include primaryfont();
-	color: $textcolor_light;
+	padding: 5px 20px 0 20px;
+	min-height: 35px;
+	position: relative;
+	z-index: 2;
 	p:last-child {
 		margin-bottom: 0;
 		padding-bottom: 0;
 	}
+}
+blockquote, blockquote p {
+	font-style: italic;
+	@include primaryfont();
+	color: $textcolor_light;
+	@include fontsize(1.8,2.6);
+	font-weight: 400;
+	text-align: center;
+}
+blockquote:after {
+	content: url(../../img/blockquote-closed.png) no-repeat;
+	display: block;
+	height: 35px;
+	width: 44px;
+	position: absolute;
+	z-index: -1;
+	bottom: 0;
+	right: 0;
+}
+figcaption, cite {
+	color: $textcolor_light;
+	@include fontsize(1.4,2.0);
+	font-style: normal;
+	display: block;
+	margin: 0 0 20px 0;
+	font-weight: 300;
+	text-align: right;
+}
+figcaption:before, cite:before {
+	content: "\2014\00a0";
+	display: inline-block;
 }
 .caption {
 	@include secondaryfont();
