Fixing list item styles

--- a/stylesheets/sass/style.scss
+++ b/stylesheets/sass/style.scss
@@ -26,7 +26,6 @@ ul, ol {
 	margin: 0 0 20px 40px;
 	padding: 0;
 	li {
-		list-style: disc;
 		list-style-position: outside;
 		margin-bottom: 5px;
 		ul, ol {
@@ -34,6 +33,8 @@ ul, ol {
 		}
 	}
 }
+ul li { list-style: disc; }
+ol li { list-style: decimal; }
 dl {
 	margin: 0 0 20px 0;
 	overflow: hidden;
