--- a/stylesheets/sass/_forms.scss
+++ b/stylesheets/sass/_forms.scss
@@ -30,6 +30,9 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus
 	outline: 0 none;
 	@include box-shadow(none);
 }
+input.action {
+	@extend .button;
+}
 select {
 	border: 1px solid $offsetcolor_verydark;
 	font-size: 15px;
