--- a/stylesheets/sass/_forms.scss
+++ b/stylesheets/sass/_forms.scss
@@ -17,8 +17,10 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
 	background: $offsetcolor_light;
 	border: 1px solid $offsetcolor_meddark;
 	color: $textcolor_dark;
+	height: auto;
 	@include primaryfont();
 	@include fontsize(1.5,2.2);
+	margin: 0 0 30px 0;
 	padding: 8px;
 	outline: none;
 	@include border-radius(0);
@@ -50,8 +52,12 @@ select[multiple] {
 
 textarea, .textarea { width: 100%; }
 input.text { width: 100%; }
-.text, .email, .password {
-	width: 46.5%;
+.text, .email, .password, .mathspamprotector {
+	clear: none;
+    display: inline-block; zoom:1; *display: inline;
+    margin: 0 -2px;
+    padding: 0 3% 0 0;
+	width: 50%;
 	@include bp("tablet") {
 		display: block;
 		width: 100%;
