--- a/stylesheets/sass/_forms.scss
+++ b/stylesheets/sass/_forms.scss
@@ -20,7 +20,7 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
 	height: auto;
 	@include primaryfont();
 	@include fontsize(1.5,2.2);
-	margin: 0 0 30px 0;
+	margin: 0;
 	padding: 8px;
 	outline: none;
 	@include border-radius(0);
@@ -31,9 +31,6 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus
 	border: 1px solid $offsetcolor_verydark;
 	outline: 0 none;
 	@include box-shadow(none);
-}
-input.action {
-	@extend .button;
 }
 select {
 	border: 1px solid $offsetcolor_verydark;
@@ -50,8 +47,11 @@ select[multiple] {
 
 /* SS Form Styles */
 
-textarea, .textarea { width: 100%; }
+textarea, .textarea  { width: 100%; } 
 input.text { width: 100%; }
+input.action {
+	@extend .button;
+}
 .text, .email, .password, .mathspamprotector {
 	clear: none;
     display: inline-block; zoom:1; *display: inline;
@@ -70,17 +70,15 @@ input.text { width: 100%; }
 		width: 100%;
 	}
 }
+.field {
+	margin-bottom: 30px;
+}
 #Spam, .optionset, .checkboxset {
 	clear: both;
 	display: block;
 }
 .optionset, .checkboxset {
 	width: 100%;
-}
-.field {
-	clear: none;
-    display: inline-block; zoom:1; *display: inline;
-    margin: 0 3% 20px 0;
 }
 .middleColumn { 
 	clear: left;
@@ -165,7 +163,6 @@ label.right {
    	padding: 10px;
    	text-align: center;
    	position: relative;
-   	margin-top: -20px;
 }
 label.required:after {
 	display: block;
