--- a/stylesheets/sass/style.scss
+++ b/stylesheets/sass/style.scss
@@ -259,8 +259,14 @@ table {
 
 /* Global Styles */
 
-* {
+*, *:before, *:after {
 	@include box-sizing("border-box");
+}
+
+/* Embeds */
+
+object, embed {
+  height: 100%;
 }
 
 /* Images */
@@ -269,6 +275,7 @@ img {
 	display: block;
 	height: auto;
 	max-width: 100%;
+	-ms-interpolation-mode: bicubic;
 }
 img.left {
 	float: left;
