--- a/assets/sass/_forms.scss
+++ b/assets/sass/_forms.scss
@@ -182,6 +182,17 @@ label.right {
    @include fontsize(1.6,2.2);
    display: block;
 }
+.success {
+	color: #fff;
+	@include fontsize(1.8,2.3);
+	font-weight: 700;
+	text-align: center;
+	padding: 20px;
+	background: $successcolor_dark;
+	border: 3px solid $successcolor_meddark;
+	display: block;
+	margin: 0 0 20px 0;
+}
 
 
 /* ==========================================================================
