Change function name to absolute center so it doesn't conflict with jeet

--- a/assets/sass/_varsandmixins.scss
+++ b/assets/sass/_varsandmixins.scss
@@ -129,7 +129,7 @@ $successcolor_verylight: lighten($successcolor, 55%);
     -ms-flex: $fg $fs $fb;
     flex: $fg $fs $fb;
 }
-@mixin center($axis: "both"){
+@mixin absolutecenter($axis: "both"){
     position:absolute;
     @if $axis == "y"{
         top:50%;
