--- a/assets/sass/_varsandmixins.scss
+++ b/assets/sass/_varsandmixins.scss
@@ -18,19 +18,19 @@ $secondarycolor_light: lighten($secondarycolor, 10%);
 $secondarycolor_medlight: lighten($secondarycolor, 20%);
 $secondarycolor_verylight: lighten($secondarycolor, 40%);
 $textcolor: #686868;
-$textcolor_dark: darken($textcolor, 10%);
-$textcolor_meddark: darken($textcolor, 20%);
-$textcolor_verydark: darken($textcolor, 30%);
-$textcolor_light: lighten($textcolor, 10%);
-$textcolor_medlight: lighten($textcolor, 25%);
-$textcolor_verylight: lighten($textcolor, 40%);
+$textcolor_strong: darken($textcolor, 10%);
+$textcolor_medstrong: darken($textcolor, 20%);
+$textcolor_verystrong: darken($textcolor, 30%);
+$textcolor_subtle: lighten($textcolor, 10%);
+$textcolor_medsubtle: lighten($textcolor, 25%);
+$textcolor_verysubtle: lighten($textcolor, 40%);
 $offsetcolor: #cccccc;
-$offsetcolor_light: lighten($offsetcolor, 5%);
-$offsetcolor_medlight: lighten($offsetcolor, 10%);
-$offsetcolor_verylight: lighten($offsetcolor, 20%);
-$offsetcolor_dark: darken($offsetcolor, 10%);
-$offsetcolor_meddark: darken($offsetcolor, 20%);
-$offsetcolor_verydark: darken($offsetcolor, 30%);
+$offsetcolor_subtle: lighten($offsetcolor, 5%);
+$offsetcolor_medsubtle: lighten($offsetcolor, 10%);
+$offsetcolor_verysubtle: lighten($offsetcolor, 20%);
+$offsetcolor_strong: darken($offsetcolor, 10%);
+$offsetcolor_medstrong: darken($offsetcolor, 20%);
+$offsetcolor_verystrong: darken($offsetcolor, 30%);
 $darkcolor: #222222;
 $darkcolor_light: lighten($darkcolor, 10%);
 $darkcolor_medlight: lighten($darkcolor, 20%);
