--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -150,7 +150,7 @@ ul.two-cols {
 		@include border-radius(3px);
 	}
 	a:link, a:visited {
-		background: $offsetcolor_light;
+		background: $offsetcolor_subtle;
 		display: block;
 		padding: 6px 10px 3px 10px;
 		text-decoration: none;
@@ -237,7 +237,7 @@ table {
 			vertical-align: top;
 		}
 	}
-	tr:nth-child(even) { background: $offsetcolor_verylight; }
+	tr:nth-child(even) { background: $offsetcolor_verysubtle; }
 	tr:nth-child(odd) { background: #fff; }
 	tr:last-child { border-bottom: none; }
 	ul { 
@@ -362,14 +362,14 @@ p {
 	margin: 0 0 20px 0;
 }
 h1, h2, h3, h4, h5, h6 {
-	color: $textcolor_meddark;
+	color: $textcolor_medstrong;
 	@include secondaryfont();
 	font-weight: 400;
 	margin: 0 0 15px 0;
 }
 h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
     font-size: 60%;
-    color: $textcolor_light;
+    color: $textcolor_subtle;
     line-height: 0;
 }
 h1 { @include fontsize(3.2,3.9); }
@@ -388,18 +388,18 @@ a:hover {
 	text-decoration: underline;
 }
 strong {
-	color: $textcolor_meddark;
+	color: $textcolor_medstrong;
 	font-weight: 700;
 }
 small {
-	color: $textcolor_light;
+	color: $textcolor_subtle;
 	@include secondaryfont();
 	font-style: italic;
 }
 code {
 	font-family: Consolas, "Liberation Mono", Courier, monospace;
 	font-weight: bold;
-	color: $textcolor_light;
+	color: $textcolor_subtle;
 }
 .center-text, .text-center, .ct {
 	text-align: center;
@@ -447,7 +447,7 @@ blockquote:after {
 	right: 0;
 }
 figcaption, cite {
-	color: $textcolor_light;
+	color: $textcolor_subtle;
 	@include fontsize(1.4,2.0);
 	@include primaryfont();
 	font-style: normal;
