Add support for bower and grunt. Switch to Jeet for grid

--- a/assets/sass/_forms.scss
+++ b/assets/sass/_forms.scss
@@ -90,7 +90,7 @@ input.text { width: 100%; }
 	}
 }
 form label.left {
-	color: #fff;
+	color: $textcolor_strong;
 	@include primaryfont();
 	@include fontsize(1.6,2.3);
 	font-weight: 700;
