--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -3,8 +3,7 @@
    ========================================================================== */ 
 
 @import "compass";
-@import "varsandmixins";
-@import "normalize";
+@import "settings";
 @import "forms";
 
 
