--- a/assets/sass/_settings.scss
+++ b/assets/sass/_settings.scss
@@ -160,12 +160,8 @@ $successcolor_verylight: lighten($successcolor, 55%);
 
 /* Fonts */
 
-@mixin primaryfont() {
-	font-family: arial, helvetica, sans-serif;
-}
-@mixin secondaryfont() {
-	font-family: georgia, times, serif;
-}
+@mixin primaryfont() { font-family: arial, helvetica, sans-serif; }
+@mixin secondaryfont() { font-family: georgia, times, serif; }
 
 /* Breakpoints */
 
